# lxmf-group

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  default.nix  pyproject.toml  shell.nix
docs/: admin-group-commands.md  concepts.md  configuration.md  development.md  group-commands.md  nixos-service.md
examples/: family-group.md
lxmf_group/: __init__.py  __main__.py  admin_group.py  base_group.py  constants.py  group.py  helpers.py  interfaces.py  server.py
tests/: test_cli.py  test_command_dict.py  test_helpers.py  test_integration.py  test_logging_properties.py  test_setup_logging.py
